# liteser

./: Info.plist  LICENSE  fileproperties.rc  libliteser.project  libliteser.vcproj  libliteser.vcxproj  libliteser.vcxproj.filters  libliteser_2008.sln  libliteser_2010.sln  libliteser_2012.sln  libliteser_WinRT.sln  libliteser_WinRT.vcxproj  libliteser_vs2012-winrt.sln  libliteser_vs2012.sln  libliteser_vs2013-winp8.sln  libliteser_vs2013.sln  libliteser_vs2015.sln  libliteser_vs2022.sln  readme.txt
android-studio/lib/: CMakeLists.txt  build.gradle
android-studio/lib/src/main/: AndroidManifest.xml
branches/1.0/: libliteser.project
branches/1.1/: libliteser.vcproj  libliteser.vcxproj  libliteser_2012.sln  (+2 more)
libliteser.xcodeproj/: project.pbxproj
liteser.xcodeproj/: project.pbxproj
props/: v110-winrt.configuration.props  v110-winrt.default.props  v110.default.props
scripts/: Ls2.py  Ls3.py  Lsx.py  Model.py  Object.py  Type.py  Util.py  Variable.py  __init__.py  convert_format.py
src/: Deserialize.cpp  Deserialize.h  DeserializeXml.cpp  DeserializeXml.h  Factory.cpp  Header.cpp  Serializable.cpp  Serialize.cpp  Serialize.h  SerializeXml.cpp  SerializeXml.h  Type.cpp  Utility.cpp  Utility.h  Variable.cpp  Variable_0.cpp  Variable_1.cpp  Variable_2.cpp  Variable_3.cpp  liteser.cpp
trunk/: Info.plist  LICENSE  fileproperties.rc  libliteser.project  libliteser.vcproj  libliteser.vcxproj  libliteser.vcxproj.filters  libliteser_2008.sln  libliteser_2010.sln  libliteser_WinRT.sln  libliteser_WinRT.vcxproj  libliteser_vs2013-winrt.sln  readme.txt
(+133 files in other folders)
